# Real-Time-Temperature-Telemetry

./: .gitignore  README.md  TO-DO.txt  main.py  pyproject.toml  requirements.txt  serial_log.csv  serial_log.txt  test.py  test_qtcharts.py
N76E003 Files/: ADC_test.asm  math32.inc
backend/: ChartDataProvider.py  Reactor.py  SerialManager.py
qml/: ChartComponent.qml  Colors.qml  CustomButton.qml  GraphPanel.qml  LabeledSwitch.qml  SerialConnectionDialog.qml  TitleBar.qml  WindowDragHandler.qml  main.qml  test_chart.qml
